--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@canvasjs/angular-charts": "^1.2.0",
     "firebase": "^10.11.1",
     "ngx-toastr": "^18.0.0",
+    "papaparse": "^5.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -31,6 +32,7 @@
     "@angular/cli": "^17.3.4",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/papaparse": "^5.3.14",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
